@@ -28,7 +28,24 @@ class C_Queue extends B_Controller
         $this->response()->setXML(true);
         $blog_hash = $this->request()->blog;
         $profile_id = $this->session()->user_profile_id;
-        $this->view->result = BlogEntry::findQueueByUserAndBlog($profile_id, $blog_hash);
+        $results = BlogEntry::findQueueByUserAndBlog($profile_id, $blog_hash);
+
+        $zd = new Zend_Date(time(), false, $this->session()->getCulture());
+        $zd->setTimezone($this->session()->getTimezone());
+
+        for($i=0;$i<count($results['queue']);$i++)
+        {
+            $zd->setTimestamp(strtotime($results['queue'][$i]['publication_date']));
+            $results['queue'][$i]['publication_date_local'] = $zd->toString();
+        }
+
+        for($i=0;$i<count($results['published']);$i++)
+        {
+            $zd->setTimestamp(strtotime($results['published'][$i]['publication_date']));
+            $results['published'][$i]['publication_date_local'] = $zd->toString();
+        }
+
+        $this->view->result = $results;
     }
 
     /**
@@ -45,10 +62,17 @@ class C_Queue extends B_Controller
         $feed_hash = $this->request()->feed;
         $profile_id = $this->session()->user_profile_id;
 
-        $this->view->result = BlogEntry::newFromFeedArticle($article_md5,
-                                                            $blog_hash,
-                                                            $feed_hash,
-                                                            $profile_id);
+        $entry = BlogEntry::newFromFeedArticle($article_md5,
+                                               $blog_hash,
+                                               $feed_hash,
+                                               $profile_id);
+
+        $zd = new Zend_Date(time(), false, $this->session()->getCulture());
+        $zd->setTimezone($this->session()->getTimezone());
+        $zd->setTimestamp($entry['publication_date']);
+        $entry['publication_date_local'] = $zd->toString();
+
+        $this->view->result = $entry;
     }
 
     /**
